# BO_lysoAI

./: .gitignore  README.md  analyze0.ipynb  config.py  ferroci_analyzer.spec  main.py  pyproject.toml  read_ferro_bare.py  requirements.txt
.github/workflows/: build-ubuntu-exe.yml  build-windows-exe.yml
app/: main_window.py
app/.github/workflows/: build-ubuntu-exe.yml  build-windows-exe.yml
app/widgets/: drop_zone.py  plot_widget.py  results_table.py  status_log.py
core/: data_processor.py  file_manager.py  metrics_registry.py
core/metrics/: base_metric.py  curve_difference.py  example_metric.py  min_max_range.py
example/: FERRO BARE.csv  FERRO MOD -0.5 to 1.7 V.csv  FERRO MOD 9 0.0 to 1.7.csv  MOD FERRO CV -1 to 1.7 V.csv  data.csv  data.xlsx
