[project]
name = "ferroci-analyzer"
version = "1.0.0"
description = "Electrochemical Data Analysis Tool"
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.6.0",
    "PyQt6-WebEngine>=6.6.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "scipy>=1.10.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
]